# Stubduino

./: CMakeLists.txt  README.md
cmake/: CreateBootstrap.cmake
src/: simulator.cpp
src/emulated/: ArduinoTypes.h  Hardware.h  HardwareLayer.cpp  HardwareLayer.h  VirtualSerial.cpp  VirtualSerial.h
src/hardware/default/: bootstrap.cpp
src/hardware/default/include/: Arduino.h
src/hardware/default/src/: Arduino.cpp
